# asl-bloch-sim

./: .gitignore  3D EPG.ipynb  Bloch 3D GRASE.ipynb  Bloch ASL PCASL-GRASE Background Suppression.ipynb  Bloch ASL PCASL-GRASE.ipynb  Bloch EPI.ipynb  Bloch FSE.ipynb  Bloch GRASE.ipynb  Bloch PCASL Aliased Planes.ipynb  Bloch PCASL Full Relaxation.ipynb  Bloch PCASL Max Labelling Efficiency Observed.ipynb  Bloch PCASL No Flow.ipynb  Bloch PCASL Quadratic Trajectory With Aliases.ipynb  Bloch PCASL Systolic-diastolic Aortic Trajectory - Postion Offset.ipynb  Bloch PCASL Systolic-diastolic Aortic Trajectory.ipynb  Bloch PCASL Systolic-diastolic Carotid Trajectory.ipynb  Bloch PCASL Systolic-diastolic Sine Trajectory.ipynb  Bloch PCASL.ipynb  Bloch Pulsed Labelling.ipynb  EPG EPI.ipynb  Kinetic ASL Model.ipynb  README.md  pyproject.toml
.github/workflows/: build.yml
asl_bloch_sim/: __init__.py  animation.py  animation_old.py  bloch.py  flow.py  rf.py  rf_design.py  test_arrow.py  test_arrow3d.py  test_arrowgl.py  utils.py
asl_bloch_sim/backends/: manim_cairo.py
docs/: adiabatic_pulse_demo.rst  conf.py  index.rst  references.bib
docs/_static/: custom.css
examples/: Adiabatic Inversion Animation.ipynb  Adiabatic Inversion.ipynb  CASL Inversion Carotid.ipynb  CASL Inversion Linear.ipynb  Control No Gradient.ipynb  Control Saturation Off-Resonance.ipynb  Flow-Induced Adiabatic Control with G.ipynb  Flow-Induced Adiabatic Control.ipynb  Flow-Induced Adiabatic Inversion Aortic.ipynb  Flow-Induced Adiabatic Inversion Carotid Grid Friction Holdsworth.ipynb  Flow-Induced Adiabatic Inversion Carotid Grid.ipynb  Flow-Induced Adiabatic Inversion Carotid.ipynb  Flow-Induced Adiabatic Inversion Linear.ipynb  Flow-Induced Adiabatic Inversion Zero.ipynb  Flow-Induced Adiabatic Inversion.ipynb  Friction Flow Modelling.ipynb  Inversion Recovery.ipynb  ManimTest.ipynb  holdsworth_cca_flow.ipynb
gigablochs/: __init__.py  animation.py  bloch.py  flow.py  rf.py  test_mpl_arrow3d.ipynb  utils.py
gigablochs/backends/: manim_cairo.py
notebook playground/: Assorted Bloch Simulations and Flow Compensation.ipynb  Bloch PCASL Old Aliased Planes.ipynb  Bloch PCASL-Quad Traj No Aliasing.ipynb  Bloch PCASL-Systolic-diastolic Carotid Traj Grid Loop Prototype.ipynb
tests/: test_bloch.py
