[project]
name = "gigablochs"
version = "0.2.0"
authors = [
  { name="Adam Suban-Loewen"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "A flexible Bloch simulation framework enabling large parameter space investigations, such as for Arterial Spin Labelling (ASL)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "bokeh",
    "tqdm",
    "manim",
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx_rtd_theme", "numpydoc", "sphinxcontrib-bibtex", "sphinxcontrib-video"]
gpu = ["cupy-cuda12x!=13.0.0"]

[tool.setuptools]
py-modules = ["gigablochs"]

[project.urls]
Homepage = "https://nathanielatom.github.io/gigablochs"
Issues = "https://github.com/nathanielatom/gigablochs/issues"
