[project]
name = "gigablochs"
version = "0.2.0"
authors = [
  { name="Adam Suban-Loewen"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "A flexible Bloch simulation framework enabling large parameter space investigations, such as for Arterial Spin Labelling (ASL)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "bokeh",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "pydata_sphinx_theme", "numpydoc", "sphinxcontrib-bibtex", "sphinxcontrib-video", "sphinx_copybutton"]
gpu = ["cupy-cuda12x!=13.0.0"]
animation = ["manim"]

[tool.setuptools.packages.find]
include = ["gigablochs*"]

[project.urls]
Homepage = "https://nathanielatom.github.io/gigablochs"
Issues = "https://github.com/nathanielatom/gigablochs/issues"
